Fixed the bug too large images

--- a/front-end/src/app/answers/create-answer/create-answer.component.scss
+++ b/front-end/src/app/answers/create-answer/create-answer.component.scss
@@ -1,5 +1,6 @@
-.photo-form {
-  width: 70%;
+#photoQuiz {
+  width: 100%;
+  border-radius: 10px;
 }
 
 #cadre-photo {
@@ -11,11 +12,6 @@
   margin: auto;
 }
 
-#photoQuiz {
-  width: 100%;
-  border-radius: 10px;
-}
-
 .camera-form {
   font-size: 3em;
   color: aliceblue;
@@ -25,9 +21,4 @@
   border-left: black 1px solid;
   border-top-left-radius: 10px;
   padding: 10px;
-}
-
-.upload-btn {
-  display: block;
-  margin: auto;
 }
